--- a/src/Home.css
+++ b/src/Home.css
@@ -77,10 +77,21 @@ iframe {
     width: 68%;
 }
 
+#tools4allMedia {
+    display: none;
+}
 
 @media (max-width: 768px) {
     .projects-section h2 {
         margin: 10px 0;
+    }
+
+    #tools4all{
+        display: none;
+    }
+
+    #tools4allMedia {
+        display: block;
     }
 
     .warGameGif {
